# KWorks

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING.zh.md  Install.md  LICENSE  README.md  README.zh.md  cron_config.json  release.mjs  start.sh
.github/workflows/: release.yml
desktop/: README.md  README.zh.md  electron-builder.yml  package.json  pnpm-lock.yaml
desktop/scripts/: codesign-retry.mjs  dev.mjs  export-mac-secrets.mjs  fix-node-pty-permissions.mjs  generate-mac-latest.mjs  migrate-dev-data.mjs  notarize.cjs  prepare-package-resources.mjs  rename-preload.mjs  verify-built-package-resources.mjs  verify-package-resources.mjs
desktop/src/: ipc.ts  (+11 more)
frontend/: AGENTS.md  CLAUDE.md  README.md  README.zh.md  eslint.config.js  next.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
qiongqi/: A股复盘报告_20260629.md  README.en.md  README.zh.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
scripts/: serve.mjs
skills/public/finance/kk-market-linkage-engine/: CHANGELOG.md  README.md  SKILL.md  pyproject.toml
skills/public/finance/kk-market-linkage-engine/market_linkage_engine/: __init__.py  __main__.py  config.py  engine.py  utils.py
skills/public/finance/kk-market-linkage-engine/market_linkage_engine/analyzers/: __init__.py  base.py  broad_etf_share.py  dragon_tiger.py  futures_basis.py  main_capital.py  margin.py  northbound.py  options_vol.py  shibor.py
skills/public/finance/kk-market-linkage-engine/market_linkage_engine/data/: __init__.py  fetcher.py
skills/public/finance/kk-market-linkage-engine/tests/: test_rendering.py
(+700 files in other folders)
